# xfeat-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  package.xml  sample.py  xfeat-cppConfig.cmake.in  xfeat_onnx.cpp  xfeat_onnx.h  xfeat_onnx.py
cmake/: Findonnxruntime.cmake  xfeat-cppConfig.cmake.in
examples/: CMakeLists.txt  batch_match_example.cpp  main.cpp
include/xfeat-cpp/: faiss_database.h  gpu_matcher.h  helpers.h  lighterglue_cv.h  lighterglue_onnx.h  netvlad_onnx.h  types.h  xfeat_cv.h  xfeat_netvlad_onnx.h  xfeat_onnx.h
onnx_model/: netvlad.onnx  xfeat_nv.onnx
scripts/: CMakeLists.txt  extract_netvlad_desc.cpp  print_onnx.py  train_faiss_ivfflat.cpp
src/: gpu_matcher.cu  lighterglue_onnx.cpp  netvlad_onnx.cpp  xfeat_cv.cpp  xfeat_netvlad_onnx.cpp  xfeat_onnx.cpp
tests/: CMakeLists.txt  test_faiss.cpp  test_xfeat_cv.cpp
